<resources>
    <string name="app_name">KavaBulki</string>

    <string name="favorites">Favorites</string>
    <string name="menu">Menu</string>

    <string name="customer_name">Who are you?</string>
    <string name="item_name" translatable="false">Item name</string>
    <string name="description" translatable="false">Description</string>
    <string name="price">Price </string>
    <string name="total_cost">Total cost </string>
    <string name="create_order">Create order</string>
    <string name="add_favorites">Add to favorites</string>
    <string name="uah">UAH</string>

    <string name="espresso">A popular short coffee drink. Expresso is the basis for the coffee menu</string>
    <string name="americano">Americano is an espresso with boiling water. The same amount of delicious coffee, but more water</string>
    <string name="raf">Raf coffee base on espresso with steamed milk foam and mild vanilla flavor</string>
    <string name="latte">Espresso is mixed with steamed milk and topped with foam</string>
    <string name="lav_latte">Classic latte with the dried flowers of lavender and lavender syrup</string>
    <string name="capuccino">A cappuccino is an Italian coffee drink. Traditionally it made with espresso and steamed milk foam</string>
    <string name="flat_white">Drink from Australia with bright coffee taste: steamed milk covers the strong coffee</string>
    <string name="cacao">Cacao is milk steamed with natural cacao powder</string>
    <string name="chocolate">A thick chocolate drink based on milk</string>
    <string name="juice">Coffee-juice is an interesting mix of flavored espresso and warm juice</string>

</resources>
